# sp_nodes

./: CMakeLists.txt  README.md  package.xml
scripts/: publisherA.py  publisherB.py  subscriber.py
