<?xml version="0.1"?>
<package format="2">
  <name>sp_nodes</name>
  <version>0.0.1</version>
  <description>Base publisher and subscriber nodes written in python. </description>

 
  <maintainer email="ir4klis@todo.todo"> Github: ir4klis </maintainer>


  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
 



  <export>


  </export>
</package>
